--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" href="lib/style.css">
   <title>Calculator</title>
 </head>
 <body>
@@ -21,22 +22,22 @@
             </tr>
             <tr>
               <td colspan="2">
-              <button type="button" title="Convert" class="btn" tabindex="2" onclick="convert()"><img src="/lib/icons/glyphicons_all/glyphicons_halflings/glyphicons_halflings_030_refresh.png" alt=""> Convert</button>
-              <button type="reset" title="Reset" class="btn" tabindex="3"><img src="/lib/icons/glyphicons_all/glyphicons_halflings/glyphicons_halflings_013_remove.png" alt=""> Reset</button>
+              <button type="button" title="Convert" class="btn" tabindex="2" onclick="convert16();"><img src="./lib/icon/convert.png" alt=""> Convert</button>
+              <button type="reset" title="Reset" class="btn" tabindex="3"><img src="./lib/icon/reset.png" alt=""> Reset</button>
               </td>
             </tr>
             <tr>
             <td colspan="2">Binary Result:</td>
             </tr>
             <tr>
-            <td><textarea rows="2" id="y" class="outtext" readonly tabindex="5"></textarea></td>
+            <td><textarea rows="2" id="y" class="outtext" readonly tabindex="4"></textarea></td>
             <td class="mathsymbol"><sub>2</sub></td>
             </tr>
             <tr>
             <td colspan="2">Decimal Result:</td>
             </tr>
             <tr>
-            <td><textarea rows="2" id="y2" class="outtext" readonly tabindex="6"></textarea></td>
+            <td><textarea rows="2" id="y2" class="outtext" readonly tabindex="5"></textarea></td>
             <td class="mathsymbol"><sub>10</sub></td>
             </tr>
             </tbody>
@@ -44,5 +45,7 @@
           </form>
       </div>
   </div>
+  <script src="lib/bignumber/bignumber.min.js"></script>
+  <script src="lib/func.js"></script>
 </body>
 </html>
