add copy function

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             </tr>
             <tr>
             <td><textarea rows="2" id="y" class="outtext" readonly tabindex="4"></textarea></td>
-            <td class="mathsymbol"><sub>2</sub></td>
+            <td class="mathsymbol" onclick="copy('y');"><sub>2</sub></td>
             </tr>
             <tr>
             <td colspan="2">Decimal Result:</td>
             </tr>
             <tr>
             <td><textarea rows="2" id="y2" class="outtext" readonly tabindex="5"></textarea></td>
-            <td class="mathsymbol"><sub>10</sub></td>
+            <td class="mathsymbol" onclick="copy('y2');"><sub>10</sub></td>
             </tr>
             </tbody>
           </table>
