fix inline script issue

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </tr>
             <tr>
               <td colspan="2">
-              <button type="button" title="Convert" class="btn" tabindex="2" onclick="convert16();"><img src="./lib/icon/convert.png" alt=""> Convert</button>
+              <button id="convert" type="button" title="Convert" class="btn" tabindex="2"><img src="./lib/icon/convert.png" alt=""> Convert</button>
               <button type="reset" title="Reset" class="btn" tabindex="3"><img src="./lib/icon/reset.png" alt=""> Reset</button>
               </td>
             </tr>
@@ -31,14 +31,14 @@
             </tr>
             <tr>
             <td><textarea rows="2" id="y" class="outtext" readonly tabindex="4"></textarea></td>
-            <td class="mathsymbol" onclick="copy('y');"><sub>2</sub></td>
+            <td class="mathsymbol"><sub>2</sub></td>
             </tr>
             <tr>
             <td colspan="2">Decimal Result:</td>
             </tr>
             <tr>
             <td><textarea rows="2" id="y2" class="outtext" readonly tabindex="5"></textarea></td>
-            <td class="mathsymbol" onclick="copy('y2');"><sub>10</sub></td>
+            <td class="mathsymbol"><sub>10</sub></td>
             </tr>
             </tbody>
           </table>
